Added styling for nav menu

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,6 +14,11 @@ body {
     overflow: hidden;
 }
 
+ul {
+    padding: 0;
+    margin: 0;
+}
+
 
 /* Header */
 
@@ -23,4 +28,17 @@ header {
     padding-top: 30px;
     min-height: 70px;
     border-bottom: #e8491d 3px solid;
+}
+
+header a {
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+header li {
+    display: inline;
+    float: left;
+    padding: 0 20px 0 20px;
 }
