--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,3 +42,16 @@ header li {
     float: left;
     padding: 0 20px 0 20px;
 }
+
+header #branding {
+    float: left;
+}
+
+header #branding h1 {
+    margin: 0;
+}
+
+header nav {
+    float: right;
+    margin-top: 10px;
+}
