Added text size, color and hover effect to nav menu

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -55,3 +55,14 @@ header nav {
     float: right;
     margin-top: 10px;
 }
+
+header .highlight,
+header .current a {
+    color: #e8491d;
+    font-weight: bold;
+}
+
+header a:hover {
+    font-weight: bold;
+    color: #cccccc;
+}
