--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,4 +73,19 @@ header a:hover {
 #showcase {
     min-height: 400px;
     background: url(../img/showcase.jpg) no-repeat 0 -400px;
+    text-align: center;
+    color: #ffffff;
+}
+
+#showcase h1 {
+    margin-top: 100px;
+    font-size: 55px;
+    margin-bottom: 10px;
+}
+
+#showcase p {
+    font-size: 20px;
+}
+
+
 }
