--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,3 +119,21 @@ header a:hover {
     height: 25px;
     width: 250px;
 }
+
+
+/* Boxes */
+
+#boxes {
+    margin-top: 20px;
+}
+
+#boxes .box {
+    float: left;
+    text-align: center;
+    width: 30%;
+    padding: 10px;
+}
+
+#boxes .box img {
+    width: 90px;
+}
