--- a/CSS/style.css
+++ b/CSS/style.css
@@ -137,3 +137,14 @@ header a:hover {
 #boxes .box img {
     width: 90px;
 }
+
+
+/* Footer*/
+
+footer {
+    padding: 20px;
+    margin-top: 20px;
+    color: #ffffff;
+    background-color: #e8491d;
+    text-align: center;
+}
