Added layout styling for main column and sidebar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -139,6 +139,20 @@ header a:hover {
 }
 
 
+/* Sidebar*/
+
+aside#sidebar {
+    float: right;
+    width: 30%;
+    margin-top: 10px;
+}
+
+article#main-col {
+    float: left;
+    width: 65%;
+}
+
+
 /* Footer*/
 
 footer {
