--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,6 +28,14 @@ ul {
     color: #ffffff
 }
 
+.dark {
+    padding: 15px;
+    background: #35424a;
+    color: #ffffff;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 
 /* Header */
 
