added styling to price list

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,6 +37,17 @@ ul {
 }
 
 
+/* Services */
+
+ul#services li {
+    list-style: none;
+    padding: 20px;
+    border: #cccccc solid 1px;
+    margin-bottom: 5px;
+    background: #e6e6e6;
+}
+
+
 /* Header */
 
 header {
