--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,17 +37,6 @@ ul {
 }
 
 
-/* Services */
-
-ul#services li {
-    list-style: none;
-    padding: 20px;
-    border: #cccccc solid 1px;
-    margin-bottom: 5px;
-    background: #e6e6e6;
-}
-
-
 /* Header */
 
 header {
@@ -166,9 +155,23 @@ aside#sidebar {
     margin-top: 10px;
 }
 
+
+/* Main Column */
+
 article#main-col {
     float: left;
     width: 65%;
+}
+
+
+/* Services */
+
+ul#services li {
+    list-style: none;
+    padding: 20px;
+    border: #cccccc solid 1px;
+    margin-bottom: 5px;
+    background: #e6e6e6;
 }
 
 
