added styling to quote form

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -155,6 +155,12 @@ aside#sidebar {
     margin-top: 10px;
 }
 
+aside#sidebar .quote input,
+aside#sidebar .quote textarea {
+    width: 90%;
+    padding: 5px;
+}
+
 
 /* Main Column */
 
